# UpSquared_ROS2_src

./: .gitignore  README.md
apriltag_ros/cfg/: tags_36h11.yaml
apriltag_ros/launch/: test.launch.yml  test1.launch.yml
aruco_detect/: CMakeLists.txt  package.xml
aruco_detect/aruco_detect/: aruco.py  kalman_filter.py
aruco_detect/aruco_detect_py/: aruco.py
aruco_detect/config/: VGA_180fps_camera_parameter.yaml  aruco_markers.yaml  camera_frame_to_drone_frame.yaml  platform_markers.yaml  simulation_camera_parameter.yaml
aruco_detect/launch/: activate_aruco_detect.launch.py  activate_aruco_detect_sim.launch.py
aruco_detect/scripts/: aruco_detector_node.py  camera_node.py  closest_marker_publisher.py  detect_aruco_node.py  kalman_node.py  median_filter_node.py
aruco_msgs/msg/: Marker.msg
coin417rg2_thermal/: CMakeLists.txt  README.MD  package.xml
coin417rg2_thermal/config/: thermal_camera.yaml
coin417rg2_thermal/include/coin417rg2_thermal/: guidemt.h  guideusbcamera.h
coin417rg2_thermal/include/coin417rg2_thermal/arm/: guidemt.h  guideusbcamera.h
coin417rg2_thermal/launch/: coin417rg2.launch.py  coin417rg2_sim.launch.py
coin417rg2_thermal/scripts/: simulator_thermal.py  thermal_frame_to_drone_frame.py
coin417rg2_thermal/src/: COIN417RG2_ros2_node.cpp  test.cpp  thermal_frame_to_drone_frame.cpp
drone_status/: CMakeLists.txt  package.xml
drone_status/scripts/: USBChecker.py  test.py
drone_status_msgs/: CMakeLists.txt  package.xml
drone_status_msgs/srv/: CheckUSBDevices.srv
drone_vslam/config/: rtab.rviz
drone_vslam/launch/: apriltag_detect.launch.py  drone_mapping.launch.py  rtabmap.launch.py  rtabmap_rgbd_odometry.launch.py
flight_control/: CMakeLists.txt  README.md  package.xml
flight_control/config/: apm_config.yaml  aruco_markers copy.yaml  aruco_markers.yaml  base_position.yaml
flight_control/config/hide/: aruco_markers.yaml
flight_control/flight_control_py/aruco_visual/: aruco.py
flight_control/flight_control_py/flight/: base_control.py  flight_controller_info.py  mission.py
flight_control/flight_control_py/tool/: PID.py  get_yaml_config.py
flight_control/launch/: apm.launch  aruco_detect.launch.py  aruco_detect_sim.launch.py  flight_controller_setup.launch.py  flight_prepare.launch.py  flight_prepare_sim.launch.py  main_flight.launch.py  pre_flight.launch.py  tt.launch.py
flight_control/launch/hide/: aruco_detect_sim.launch.py
flight_control/scripts/: aruco_detector_node.py  client.py  flight_info_node.py  main_flight_node.py
flight_control/scripts/aruco_visual/: aruco.py  aruco_detector_node.py
flight_control/src/: cpp_node.cpp
flight_control/srv/: GetCloestAruco.srv
get_drone_position/: package.xml  setup.cfg  setup.py
get_drone_position/get_drone_position/: test_calculate_distance.py  test_tf2_broadcast.py  test_tf2_reverb_Node.py
launch_manager/: CMakeLists.txt  package.xml
launch_manager/launch/: main_flight.launch.py  pre_flight.launch.py
payload/: CMakeLists.txt  package.xml
payload/scripts/: JY_modbus_service.py  fire_extinguisher.py  gpio_service.py
payload/src/: cpp_node.cpp
payload/srv/: HoldPayload.srv
platform_communication/: CMakeLists.txt  package.xml
platform_communication/scripts/: hello.py  platform_communication_node.py
platform_communication/src/: hello.cpp
platform_communication/srv/: CheckTankStatus.srv  VerticalSlider.srv
small_thermal/: CMakeLists.txt  package.xml
small_thermal/src/: test_small_thermal.cpp
